yuan/Supermarket-Management-System/compiling_error.txt
/Users/zolar/OneDrive - Queen Mary, University of London/Project/Supermarket-Management-System/Supermarket-Management-System/buy_search_all.cpp:48:3: error: no matching function for call to 'database_all_index'
  database_all_index(0, 't', 'a');
  ^~~~~~~~~~~~~~~~~~
/Users/zolar/OneDrive - Queen Mary, University of London/Project/Supermarket-Management-System/Supermarket-Management-System/database.h:402:13: note: candidate function not viable: no known conversion from 'char' to 'char *' for 2nd argument
extern void database_all_index(int read_type, char goods_id[30],
            ^
1 error generated.
